# DnDSystem

./: CMakeLists.txt  Cmakelists.txt.sample  LICENSE  README.md
docs/: CppBuild.md  DirectoryPath.md  Plantejament.md
include/GameEngine/: Entity.h  GameEngine.h
include/entities/: Statblock.h  Statblock.h~
include/graphics/: BasicOperations.h  NcursesGraphics.h
include/project/: GameObject.h
include/rules/: Roll.h  Roll.h~  Stats.h
src/: main.cpp
src/GameEngine/: Entity.cpp  GameEngine.cpp
src/GameEngine.cpp/: GameEngine.cpp
src/GameObject/: GameObject.cpp
src/graphics/: BasicOperations.cpp  NcursesGraphics.cpp
src/rules/: Dices.cpp~  Roll.cpp  Roll.cpp~
